--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">nmedia</string>
-    <string name="nmedia">NMedia!</string>
+    <string name="nmedia">Post author name</string>
 </resources>
