--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">nmedia</string>
-    <string name="nmedia">Имя автора поста</string>
+    <string name="app_name">Нмедиа</string>
+    <string name="greetings">Нмедиа!</string>
+    <string name="share_button">Поделиться</string>
+    <string name="menu_button">Меню</string>
+    <string name="views_button">Просмотры</string>
+    <string name="like_button">Лайки</string>
+    <string name="avatar_description">Аватарка</string>
 </resources>
