--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Нмедиа</string>
-    <string name="greetings">Нмедиа!</string>
-    <string name="share_button">Поделиться</string>
-    <string name="menu_button">Меню</string>
-    <string name="views_button">Просмотры</string>
-    <string name="like_button">Лайки</string>
-    <string name="avatar_description">Аватарка</string>
+    <string name="app_name">НМедиа</string>
+    <string name="avatar_description">Аватар автора</string>
+    <string name="description_post_menu">Меню</string>
+    <string name="description_likes">Нравится</string>
+    <string name="description_shares">Поделиться</string>
+    <string name="description_views">Просмотры</string>
 </resources>
