--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,11 @@
     <string name="description_likes">Нравится</string>
     <string name="description_shares">Поделиться</string>
     <string name="description_views">Просмотры</string>
+    <string name="remove">Удалить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="save">Сохранить</string>
+    <string name="edit">Редактировать</string>
+    <string name="editImage">Изображение редактирования</string>
+    <string name="edit_message">Редактирование</string>
+    <string name="cancelEditButton">Кнопка отмены</string>
 </resources>
