--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="description_likes">Like</string>
     <string name="description_shares">Share</string>
     <string name="description_views">Views</string>
+    <string name="remove">Remove</string>
+    <string name="post_text">Post text</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
+    <string name="editImage">EditItem</string>
+    <string name="edit_message">Edit message</string>
+    <string name="cancelEditButton">CancelEditButton</string>
 </resources>
