--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,13 @@
 <resources>
     <string name="app_name">NMedia</string>
-    <string name="avatar_description">Author avatar</string>
-    <string name="description_post_menu">Post menu</string>
-    <string name="description_likes">Like</string>
-    <string name="description_shares">Share</string>
-    <string name="description_views">Views</string>
-    <string name="description_share_post">Share post</string>
+    <string name="nmedia">NMedia!</string>
+    <string name="author_avatar">Author avatar</string>
     <string name="remove">Remove</string>
     <string name="post_text">Post text</string>
-    <string name="save">Save</string>
     <string name="edit">Edit</string>
-    <string name="editImage">EditItem</string>
     <string name="edit_message">Edit message</string>
-    <string name="cancelEditButton">CancelEditButton</string>
-    <string name="EmptyText">No text</string>
+    <string name="chooser_share_post">Share post</string>
+    <string name="chooser_play_video">Play video</string>
     <string name="description_post_save">Save</string>
-    <string name="add_post">Add post</string>
+    <string name="add_post" >Add post</string>
 </resources>
